--- a/PostSafety/Podfile
+++ b/PostSafety/Podfile
@@ -4,5 +4,5 @@ platform :ios, '9.0'
 target 'PostSafety' do
 use_frameworks!
 pod 'IQKeyboardManagerSwift', '5.0.0'
-pod 'TPKeyboardAvoidingSwift'
+#pod 'TPKeyboardAvoidingSwift'
 end
