--- a/PostSafety/Podfile
+++ b/PostSafety/Podfile
@@ -5,4 +5,6 @@ target 'PostSafety' do
 use_frameworks!
 pod 'IQKeyboardManagerSwift', '5.0.0'
 #pod 'TPKeyboardAvoidingSwift'
+pod 'Alamofire', ‘4.2.0’
+pod 'SwiftyJSON', '3.1.3'
 end
