--- a/PostSafety/Podfile
+++ b/PostSafety/Podfile
@@ -9,5 +9,6 @@ pod 'Alamofire', ‘4.2.0’
 pod 'SwiftyJSON', '3.1.3'
 pod 'Reachability'
 pod 'RealmSwift'
-pod 'ACProgressHUD-Swift', '~> 1.3' 
+pod 'ACProgressHUD-Swift', '~> 1.3'
+pod 'DZNEmptyDataSet'
 end
